backend/backend.log

> backend@1.0.0 dev
> nodemon src/server.js

[33m[nodemon] 3.1.14[39m
[33m[nodemon] to restart at any time, enter `rs`[39m
[33m[nodemon] watching path(s): *.*[39m
[33m[nodemon] watching extensions: js,mjs,cjs,json[39m
[32m[nodemon] starting `node src/server.js`[39m
[dotenv@17.3.1] injecting env (6) from .env -- tip: ⚙️  override existing env vars with { override: true }
[server] Loading 20 events from disk...
[server] Listening on http://localhost:3001
[socket] Connected    6Ntx7DLglHa1eOQbAAAB
[socket] Client 6Ntx7DLglHa1eOQbAAAB joined room for event 1523145
[socket] Reserve attempt: 1523145:A3 by user_7sdnusbfx
[socket] Reserve result for A3: success=true, error=undefined
[socket] Reserve attempt: 1523145:A4 by user_7sdnusbfx
[socket] Reserve result for A4: success=true, error=undefined
[socket] Connected    azHaoQNQwK6J-uhmAAAD
[socket] Client azHaoQNQwK6J-uhmAAAD joined room for event 1327819
[socket] Disconnected azHaoQNQwK6J-uhmAAAD
[socket] Connected    9Gw73CtIxmaqC7QtAAAF
[socket] Client 9Gw73CtIxmaqC7QtAAAF joined room for event 1327819
[socket] Client 9Gw73CtIxmaqC7QtAAAF joined room for event 1523145
[socket] Disconnected 9Gw73CtIxmaqC7QtAAAF
[socket] Disconnected 6Ntx7DLglHa1eOQbAAAB
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node src/server.js`[39m
[dotenv@17.3.1] injecting env (6) from .env -- tip: 🛠️  run anywhere with `dotenvx run -- yourcommand`
[server] Loading 20 events from disk...
node:events:497
      throw er; // Unhandled 'error' event
      ^

Error: listen EADDRINUSE: address already in use :::3001
    at Server.setupListenHandle [as _listen2] (node:net:1940:16)
    at listenInCluster (node:net:1997:12)
    at Server.listen (node:net:2102:7)
    at file:///C:/Users/Andreia/prj-entrades-AdrianMaciel1106/backend/src/server.js:193:14
Emitted 'error' event on Server instance at:
    at emitErrorNT (node:net:1976:8)
    at process.processTicksAndRejections (node:internal/process/task_queues:90:21) {
  code: 'EADDRINUSE',
  errno: -4091,
  syscall: 'listen',
  address: '::',
  port: 3001
}

Node.js v22.20.0
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node src/server.js`[39m
file:///C:/Users/Andreia/prj-entrades-AdrianMaciel1106/backend/src/modules/seients/seient.socket.js:47
    const { releaseSeat } = await import('./seient.model.js'); 
                            ^^^^^

SyntaxError: Unexpected reserved word
    at compileSourceTextModule (node:internal/modules/esm/utils:346:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:107:18)
    at #translate (node:internal/modules/esm/loader:546:20)
    at afterLoad (node:internal/modules/esm/loader:596:29)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:601:12)
    at #createModuleJob (node:internal/modules/esm/loader:624:36)
    at #getJobFromResolveResult (node:internal/modules/esm/loader:343:34)
    at ModuleLoader.getModuleJobForImport (node:internal/modules/esm/loader:311:41)
    at process.processTicksAndRejections (node:internal/process/task_queues:105:5)

Node.js v22.20.0
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node src/server.js`[39m
[dotenv@17.3.1] injecting env (6) from .env -- tip: 🛡️ auth for agents: https://vestauth.com
[server] Loading 20 events from disk...
[server] Listening on http://localhost:3001
[socket] Connected    6KgMcliMUtlRPiV-AAAB
[socket] Client 6KgMcliMUtlRPiV-AAAB joined room for event 1327819
[socket] Reserve attempt: 1327819:A1 by user_xi1m0xhdv
[socket] Reserve result for A1: success=true, error=undefined
[socket] Disconnected 6KgMcliMUtlRPiV-AAAB
